--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
                         <a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"></i> Tweet</a>
                     </div>
                 </main>
-        <script src="js/scrpit.js"></script>
+        <script src="js/script.js"></script>
      </body>
 </html>
